@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version='1.0' encoding='UTF-8'?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.infinispan.server</groupId>
         <artifactId>infinispan-server-versions</artifactId>
-        <version>6.0.0-SNAPSHOT</version>
+        <version>6.0.0.Beta2</version>
         <relativePath>../versions/pom.xml</relativePath>
     </parent>
 
@@ -43,7 +42,7 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
-        <!--- @ThreadSafe annotation -->
+        
         <dependency>
             <groupId>net.jcip</groupId>
             <artifactId>jcip-annotations</artifactId>
@@ -51,7 +50,7 @@
     </dependencies>
 
     <properties>
-        <!--<ispnserver.ts.dir>${basedir}/..</ispnserver.ts.dir>-->
+        
         <ispnserver.project.dir>${basedir}/..</ispnserver.project.dir>
         <server.build.dist>${ispnserver.project.dir}/build/target/infinispan-server-${project.version}
         </server.build.dist>
@@ -60,7 +59,7 @@
         <server3.dist>${basedir}/target/infinispan-server-${project.version}-3</server3.dist>
         <config.dir>${basedir}/src/test/resources</config.dir>
         <jvm.memory.args>-Xmx512m -XX:MaxPermSize=128m</jvm.memory.args>
-        <!--<jvm.memory.args>-Xmx512m -XX:MaxPermSize=128m -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.memory.args>-->
+        
         <jvm.ip.stack>-Djava.net.preferIPv4Stack=true</jvm.ip.stack>
         <server.jvm.args>${jvm.ip.stack} ${jvm.memory.args}</server.jvm.args>
     </properties>
@@ -153,11 +152,11 @@
                 </executions>
                 <configuration>
                     <transformationSets>
-                        <!-- NOTE: All transformations are implicitly removing REST security. For not removing it add: -->
-                        <!--<parameter>-->
-                            <!--<name>removeRestSecurity</name>-->
-                            <!--<value>false</value>-->
-                        <!--</parameter>-->
+                        
+                        
+                            
+                            
+                        
                         <transformationSet>
                             <dir>${server2.dist}/standalone/configuration/</dir>
                             <includes>
@@ -195,7 +194,7 @@
                                 </parameter>
                             </parameters>
                         </transformationSet>
-                        <!-- Replace host="remote-host" of <remote-destination> with real address-->
+                        
                         <transformationSet>
                             <dir>${server1.dist}/standalone/configuration/</dir>
                             <includes>
@@ -266,7 +265,7 @@
                                 </parameter>
                             </parameters>
                         </transformationSet>
-                        <!-- CLIENT TESTS - local, distribution and replication transformations -->
+                        
                         <transformationSet>
                             <dir>${server1.dist}/standalone/configuration/</dir>
                             <includes>
@@ -587,7 +586,7 @@
                             </systemPropertyVariables>
                         </configuration>
                     </execution>
-                    <!-- REST CLIENT TESTS -->
+                    
                     <execution>
                         <id>rest-client-local.surefire</id>
                         <phase>test</phase>
@@ -641,7 +640,7 @@
                             </systemPropertyVariables>
                         </configuration>
                     </execution>
-                    <!-- MEMCACHED CLIENT TESTS -->
+                    
                     <execution>
                         <id>memcached-client-local.surefire</id>
                         <phase>test</phase>
@@ -696,7 +695,7 @@
                             </systemPropertyVariables>
                         </configuration>
                     </execution>
-                    <!-- HOTROD CLIENT TESTS -->
+                    
                     <execution>
                         <id>hotrod-client-local.surefire</id>
                         <phase>test</phase>
